gcc/testsuite/rust/rustc/ui/reserved/reserved-become.rs
fn main() {
    let become = 0;
// { dg-error "" "" { target *-*-* } .-1 }
}

